<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_height="260dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView_poster_home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/todo"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        app:layout_constraintCircleRadius="10dp"
        app:layout_constraintDimensionRatio="5:3.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_dashboard_black_24dp" />

    <TextView
        android:id="@+id/textView_movieName_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/movie_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_poster_home" />

    <TextView
        android:id="@+id/textView_overview_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="3"
        android:paddingBottom="5dp"
        android:text="@string/overview"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#A8A8A8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_movieName_home" />

</androidx.constraintlayout.widget.ConstraintLayout>
